org.mmisw.vine - Web VINE
Carlos Rueda - MMI / MBARI

ChangeLog

2009-05-11
	- Include trailing slash for the prefixed namespaces so the terms are shown now
	  with only the <letter>:  prefix (and not <letter>:/)
	
2009-05-07
	- Util.addIndividuals: if ontologyUri is NOT a prefix of the retrieved entityUri,
	  now uses that entityUri as the "local name"; Note that the query is made against 
	  the ontology, so every individual found there should be included.
	  NOTE: this should perhaps be done to the other entities found in the ontology, but
	  only doing it for individuals as I am preparing the dispatch of URIs that are
	  completely specified in voc2rdf (first column) and not as a composition of the
	  ontology base URI and the key given to the term.
	
2009-04-20
	- automatically open row disclosure in search results when only one result.
	

2009-04-17
	- Show associated properties and values for entities in the Search result form. 
	- Besides individuals, search now also includes owl:classes, rdf:properties,
	  owl:DatatypeProperty's, and owl:ObjectProperty's with the
	  search string also applied on the values of any associated properties of those entities.
	
2009-04-06  1.5.0.alpha1
	- Added some (?) tooltips and some "not implemented" actions to proceed with asking
	  for feedback especially regarding UI.
	  
	  Here are some the next steps regarding the core functionality:
	  	- Determine the mapping ontology to use as a basis for all mappings
	  	- Determine the mechanism to allow the creation or configuration of the set of relations
	  	  that can be used in a session.
	  	- Allow registration in the repository. Perhaps this will be similar to voc2rdf, so
	  	  some metadata should be captured.
	  	- Allow read-only display for browsing existing mapping ontologies.
	  	- Allow loading of a local mapping file?
	  	- Allow saving of the current mappings in a local file?
	  	 

2009-04-03  1.5.0.alpha