@@ -6,6 +6,10 @@ ChangeLog
 2009-05-11
 	- Include trailing slash for the prefixed namespaces so the terms are shown now
 	  with only the <letter>:  prefix (and not <letter>:/)
+	  
+	- EntityInfo now with explicit attribute "URI".
+	- SearchResultsForm: If the URI is <uri> = "urn:something", then the link is now:
+	     http://mmisw.org/ont?uri=<uri>
 	
 2009-05-07
 	- Util.addIndividuals: if ontologyUri is NOT a prefix of the retrieved entityUri,
